добавил хороший промпт, модель гемму, стоптокен, теперь генерирует нормально, а не фигню. Ксюша добавила создание датасета для рагаса

--- a/master.ipynb
+++ b/master.ipynb
@@ -38,19 +38,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = {'model': 'llama3.1-8b-quant4',\n",
-    "          'repo_id': 'lmstudio-community/Meta-Llama-3.1-8B-Instruct-GGUF',\n",
-    "          'filename': 'Meta-Llama-3.1-8B-Instruct-Q4_K_M.gguf',\n",
-    "          'tokenizer': 'hugging-quants/Meta-Llama-3.1-8B-Instruct-AWQ-INT4',\n",
-    "          'embed_model': 'e5l', # краткое название, используется в именах\n",
-    "          'embed_model_full': \"intfloat/multilingual-e5-large\", # huggingface embed model\n",
-    "          'vectorstore_name': 'MILVUS', # база данных MILVUS / FAISS\n",
-    "          'chunk_size': 512,\n",
-    "          'chunk_overlap': 128,\n",
-    "          'llm_framework': 'VLLM' # VLLM, LLamaCpp\n",
-    "          'retriever': None,\n",
-    "          'chain_type': 'stuff',\n",
+    "config = {\n",
+    "    'model_name': 'llama3.1-8b-q4',  # llama3.1-8b-q4 / gemma-2-9b-it-simpo-q4 / tlite-q4\n",
+    "    'embed_model_name_short': 'e5l', # e5l (multilingual-e5-large) /\n",
+    "    'chunk_size': 512,\n",
+    "    'chunk_overlap': 128,\n",
+    "    'llm_framework': 'VLLM', # VLLM, LLamaCpp, Ollama\n",
+    "    'vectorstore_name': 'MILVUS', # база данных MILVUS / FAISS\n",
+    "    'retriever_type': None,\n",
+    "    'reranker_type': None,\n",
+    "    'chain_type': 'stuff',\n",
     "}\n",
+    "\n",
+    "llama_config = {\n",
+    "    'repo_id': 'lmstudio-community/Meta-Llama-3.1-8B-Instruct-GGUF',\n",
+    "    'filename': 'Meta-Llama-3.1-8B-Instruct-Q4_K_M.gguf',\n",
+    "    'tokenizer': 'hugging-quants/Meta-Llama-3.1-8B-Instruct-AWQ-INT4'\n",
+    "    }\n",
+    "\n",
+    "gemma_config = {\n",
+    "    'repo_id': \"mannix/gemma2-9b-simpo\",\n",
+    "    'llm_framework': 'Ollama'\n",
+    "    }\n",
+    "\n",
+    "tlite_config = {\n",
+    "    'repo_id': 'mradermacher/saiga_tlite_8b-GGUF',\n",
+    "    'filename': 'saiga_tlite_8b.Q4_K_M.gguf',\n",
+    "    'tokenizer': 'IlyaGusev/saiga_tlite_8b'\n",
+    "    }\n",
+    "\n",
+    "def update_config_with_model(config, llama_config, gemma_config, tlite_config):\n",
+    "    if config['model_name'] == 'llama3.1-8b-q4':\n",
+    "        config.update(llama_config)\n",
+    "    elif config['model_name'] == 'gemma-2-9b-it-simpo-q4':\n",
+    "        config.update(gemma_config)\n",
+    "    elif config['model_name'] == 'tlite-q4':\n",
+    "        config.update(tlite_config)\n",
+    "    else:\n",
+    "        ValueError('Incorrect model_name: choose from llama3.1-8b-q4, gemma-2-9b-it-simpo-q4, or tlite-q4')\n",
+    "    \n",
+    "    if config['embed_model_name_short'] == 'e5l':\n",
+    "        config['embedding_model'] = \"intfloat/multilingual-e5-large\"\n",
+    "\n",
+    "\n",
+    "update_config_with_model(config, llama_config, gemma_config, tlite_config)\n",
     "\n",
     "class CustomRAGPipeline:\n",
     "    def __init__(self, \n",
@@ -76,7 +107,7 @@
     "        if not recalc_embedding:\n",
     "            if os.path.exists(self.vectorstore_path) and self.config['vectorstore_name'] == 'FAISS':\n",
     "                self.vectorstore = FAISS.load_local(self.vectorstore_path, self.embeddings, allow_dangerous_deserialization=True)\n",
-    "            elif recalc_embedding and os.path.isfile(f\"{self.vectorstore_path}.db\") and self.config['vectorstore_name'] == 'MILVUS':\n",
+    "            elif os.path.isfile(f\"{self.vectorstore_path}.db\") and self.config['vectorstore_name'] == 'MILVUS':\n",
     "                self.vectorstore = Milvus(\n",
     "                    self.embeddings,\n",
     "                    connection_args={\"uri\": f\"./{self.vectorstore_path}.db\"},\n",
@@ -87,6 +118,8 @@
     "            self.llm = self.load_vllm_model()\n",
     "        elif self.config['llm_framework'] == 'LLamaCpp':\n",
     "            self.llm = self.load_llama_cpp_model()\n",
+    "        elif self.config['llm_framework'] == 'Ollama':\n",
+    "            self.llm = self.load_ollama_model()\n",
     "            \n",
     "            \n",
     "    def load_vllm_model(self):\n",
@@ -102,6 +135,7 @@
     "                                     'max_model_len': 13000,\n",
     "                                     'gpu_memory_utilization': 0.75},\n",
     "                        temperature=0.75,\n",
+    "                        stop=[\"<|eot_id|>\"]\n",
     "                        )\n",
     "        \n",
     "        return vllm_llm\n",
@@ -129,6 +163,14 @@
     "        \n",
     "        return llama_cpp_llm\n",
     "\n",
+    "    def load_ollama_model(self):\n",
+    "        return OllamaLLM(model = self.config['repo_id'], \n",
+    "                         temperature=0.8,\n",
+    "                         top_p=0.95,\n",
+    "                         top_k=30,\n",
+    "                         max_tokens=512,\n",
+    "                         stop=[\"<|eot_id|>\"])\n",
+    "    \n",
     "    def load_and_process_documents(self):\n",
     "        if not self.vectorstore:\n",
     "            # Load documents from the specified path\n",
@@ -186,6 +228,80 @@
     "    \n",
     "    # Load and process documents\n",
     "    rag_pipeline.load_and_process_documents()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a7dc78f-2228-4a9c-aad1-8b7e35c26c78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = '''Use the following pieces of context to answer the question at the end. \n",
+    "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
+    "Think step by step. Give full answer. Answer only in Russian. If context doesnt match the answer, say that you do not know the answer.\n",
+    "{context}'''\n",
+    "user_prompt = '''Question: {question}\n",
+    "Answer:'''\n",
+    "\n",
+    "custom_prompt = f\"\"\"\n",
+    "<|begin_of_text|>\n",
+    "<|start_header_id|>system<|end_header_id|>\n",
+    "{system_prompt}\n",
+    "<|eot_id|>\n",
+    "<|start_header_id|>user<|end_header_id|>\n",
+    "{user_prompt}\n",
+    "<|eot_id|>\n",
+    "<|start_header_id|>assistant<|end_header_id|>\"\"\"\n",
+    "\n",
+    "rag_pipeline.setup_qa_chain(custom_prompt)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # result = rag_pipeline.query(\"Какой герб изображен на бланках и штампах Комитета по средствам массовой информации и полиграфии Ханты-Мансийского автономного округа?\")\n",
+    "    # print(result['result'])\n",
+    "    # result = rag_pipeline.query(\"Что такое должностной оклад и как он рассчитывается?\")\n",
+    "    # result = rag_pipeline.query(\"Какие мероприятия проводит Департамент охраны окружающей среды и экологической безопасности автономного округа в 2010 году?\")\n",
+    "    result = rag_pipeline.query('Когда юридические лица и ИП должны сообщать об аварийных выбросах?')\n",
+    "    print(result['result'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7f4d88e-0649-48e9-8074-1bd404f40a16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# для создания датасета для рагаса, потом удалить\n",
+    "\n",
+    "def create_ragas_dataset(rag_pipeline, eval_dataset):\n",
+    "    rag_dataset = []\n",
+    "    for index, row in tqdm(eval_dataset.iterrows()):\n",
+    "        answer = rag_pipeline.query(row[\"question\"])\n",
+    "        rag_dataset.append(\n",
+    "            {\"question\" : row[\"question\"],\n",
+    "             \"answer\" : answer[\"result\"],\n",
+    "             \"contexts\" : [context.page_content for context in answer[\"source_documents\"]],\n",
+    "             \"ground_truth\" : row[\"ground_truth\"]\n",
+    "             }\n",
+    "        )\n",
+    "    rag_df = pd.DataFrame(rag_dataset)\n",
+    "    rag_eval_dataset = Dataset.from_pandas(rag_df)\n",
+    "    return rag_eval_dataset\n",
+    "\n",
+    "eval_dataset = pd.read_excel('v2_ragas_npa_dataset_firstPart.xlsx')\n",
+    "eval_dataset = eval_dataset.groupby('evolution_type', group_keys=False).apply(lambda x: x.sample(25, random_state=42)).copy()\n",
+    "eval_df = create_ragas_dataset(rag_pipeline, eval_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "742def37-38e2-4e2d-a1dd-3b5c9e4ecfc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_df.save_to_disk('eval_df_baseline_t_lite.hf')"
    ]
   }
  ],
