--- a/master.ipynb
+++ b/master.ipynb
@@ -2,69 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "21cf2622-3e5c-45f0-9ae3-5d0dc0ae2cbf",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-09-12T15:42:51.372152Z",
-     "iopub.status.busy": "2024-09-12T15:42:51.371798Z",
-     "iopub.status.idle": "2024-09-12T15:42:51.434983Z",
-     "shell.execute_reply": "2024-09-12T15:42:51.434257Z",
-     "shell.execute_reply.started": "2024-09-12T15:42:51.372133Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# %pip install langchain_milvus\n",
-    "# %pip install langchain-ollama"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "69414423-7269-4e2c-85cb-23cf58f64eff",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-09-13T22:44:08.139216Z",
-     "iopub.status.busy": "2024-09-13T22:44:08.138051Z",
-     "iopub.status.idle": "2024-09-13T22:44:21.045470Z",
-     "shell.execute_reply": "2024-09-13T22:44:21.044434Z",
-     "shell.execute_reply.started": "2024-09-13T22:44:08.139165Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Processing /default/cloud_ml (from -r requirements.txt (line 55))\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting en-core-web-sm@ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510 (from -r requirements.txt (line 113))\n",
-      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl (12.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m42.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
-      "\u001b[?25hCollecting jaxlib@ https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.4.13+cuda11.cudnn86-cp310-cp310-manylinux2014_x86_64.whl#sha256=af30095a0adf342b837a0ed9607e13177ee66f4e654c031a383aa546cd21d815 (from -r requirements.txt (line 223))\n",
-      "  Downloading https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.4.13+cuda11.cudnn86-cp310-cp310-manylinux2014_x86_64.whl (188.3 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m188.3/188.3 MB\u001b[0m \u001b[31m23.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hProcessing /app/ml_kernel (from -r requirements.txt (line 291))\n",
-      "\u001b[31mERROR: Could not install packages due to an OSError: [Errno 2] No such file or directory: '/app/ml_kernel'\n",
-      "\u001b[0m\u001b[31m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install -r requirements.txt\n",
-    "\n",
-    "# %pip install -qU  langchain_milvus\n",
-    "# %pip install -U langchain-ollama"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "id": "d7ed4f8b-a87b-47ea-8fb4-d2cf094e558c",
    "metadata": {
@@ -722,9 +659,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# для создания датасета для рагаса, потом удалить\n",
-    "\n",
     "def create_ragas_dataset(rag_pipeline, eval_dataset):\n",
+    "    \"\"\"\n",
+    "    Create dataset for model evaluation with ragas library.\n",
+    "\n",
+    "    Parameters:\n",
+    "    rag_pipeline (CustomRAGPipeline): Initialized instance of CustomRAGPipeline class\n",
+    "    eval_dataset (pd.DataFrame): Prepared dataset for metrics calculation\n",
+    "\n",
+    "    Returns:\n",
+    "    rag_eval_dataset(pd.DataFrame): The results with model answers and contexts.\n",
+    "    \"\"\"\n",
     "    rag_dataset = []\n",
     "    for index, row in tqdm(eval_dataset.iterrows()):\n",
     "        answer = rag_pipeline.query(row[\"question\"])\n",
@@ -738,6 +683,7 @@
     "    rag_df = pd.DataFrame(rag_dataset)\n",
     "    rag_eval_dataset = Dataset.from_pandas(rag_df)\n",
     "    return rag_eval_dataset\n",
+    "\n",
     "\n",
     "eval_dataset = pd.read_excel('v2_ragas_npa_dataset_firstPart.xlsx')\n",
     "eval_dataset = eval_dataset.groupby('evolution_type', group_keys=False).apply(lambda x: x.sample(25, random_state=42)).copy()\n",
@@ -757,7 +703,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DataSphere Kernel",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -771,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
